Added company to ticker link
fixed some organizational things and added ticker search using company name

--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -63,7 +63,8 @@
 						<li><a href='/addstock/'>Add Stock</a></li>
 				  		<li><a href='/liquidate/'>Liquidate Portfolio</a></li>
 				  {% endif %}
-				<li><a href='/findstock/'>Find Stock</a></li>
+				<li><a href='/findstock/'>Find Stock Ticker</a></li>
+				<li><a href='/getstockinfo/'>Get Stock Info</a></li>
 				<li><a href='/contact/'>Contact</a></li>
 			  </ul>
 			</div> <!--well bs-sidebar affix-->
