--- a/mysite/portfolio/templates/portfolio/add_stock_form.html
+++ b/mysite/portfolio/templates/portfolio/add_stock_form.html
@@ -7,7 +7,7 @@
                 <div class="col-sm-12 col-md-7">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                        <h3>Change Password</h3>
+                        <h3>Add a stock to your portfolio!</h3>
                             {% if error_message %}
                                 <p><strong>{{error_message|safe|linebreaks}}</strong></p>
                             {% endif %}
